--- a/style copy.css
+++ b/style copy.css
@@ -1,5 +1,7 @@
+@include 
+
 html body header .wrap {
-  height: 100%;
+     height: 100%;
 }
 
 .stars {
@@ -22,7 +24,7 @@ header {
 }
 
 .wrap {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
