--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ header {
   z-index: 0;
 }
 
-header {
+/* header {
   text-align: center;
   font: 3em/1.4 helvetica neue, helvetica, arial, sans-serif;
   color: #fff
-}
+} */
 
 .wrap {
   position: absolute;
@@ -45,5 +45,23 @@ header {
 }
 
 .bottom-div {
-  background-color: #0e1554;
+  /* background-color: #0e1554; */
+}
+
+.tall {
+  height: 100%;
+}
+
+.info-wrap {
+  /* text-align: center; */
+  /* margin:0; */
+  /* object-fit: cover; */
+  /* width: 100%; */
+  /* height: 18em; */
+  /* object-fit: contain; */
+  /* overflow: auto; */
+}
+.info {
+  /* display: inline-block; */
+
 }
