--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 html, body, header {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   background-color: #00001e;
+  /* font-size: 1.1+rem; */
+
   /* font-size: 24px; */
 }
 
@@ -17,21 +19,20 @@ header {
 } */
 
 .wrap {
-  position: absolute;
+  /* position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100%; */
 }
 
 .magic-circle {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   bottom: 0;
-  left: -9999px;
-  right: -9999px;
+text-align:center;
   margin: auto;
-  margin-top: 0;
+  margin-top: 0; */
 }
 
 .stars {
@@ -53,6 +54,9 @@ header {
 }
 
 .info-wrap {
+  display: inline-block;
+  margin: 0 auto;
+
   /* text-align: center; */
   /* margin:0; */
   /* object-fit: cover; */
@@ -62,6 +66,27 @@ header {
   /* overflow: auto; */
 }
 .info {
-  /* display: inline-block; */
+  display: inline-block;
+  margin: 0 auto;
 
+}
+
+.column-centre {
+  text-align:center;
+}
+
+.popup-card {
+  text-align: center;
+  display: inline-block;
+  margin: 20px auto;
+  width: 450px;
+}
+
+.chapter-divider {
+  width:80%;
+  border-top: 2px solid white;
+  margin: auto !important;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0),white, rgba(0, 0, 0, 0));
 }
