--- a/style.css
+++ b/style.css
@@ -27,6 +27,19 @@ header {
 }
 
 .magic-circle {
+display: inline-block;
+  margin: 0 auto;
+  max-height: 100vh;
+  /* width: 0%; */
+  /* max-width: 100vw; */
+  /* min-width: 90vw; */
+  /*width: 830px;
+  height: 830px;
+  max-width: 100%;
+  object-fit: cover; */
+
+
+
   /* position: absolute;
   top: 0;
   bottom: 0;
@@ -56,11 +69,11 @@ text-align:center;
 .info-wrap {
   display: inline-block;
   margin: 0 auto;
+  padding: 0;
 
   /* text-align: center; */
   /* margin:0; */
   /* object-fit: cover; */
-  /* width: 100%; */
   /* height: 18em; */
   /* object-fit: contain; */
   /* overflow: auto; */
@@ -68,6 +81,7 @@ text-align:center;
 .info {
   display: inline-block;
   margin: 0 auto;
+  width: 30em;
 
 }
 
@@ -79,14 +93,22 @@ text-align:center;
   text-align: center;
   display: inline-block;
   margin: 20px auto;
-  width: 450px;
+  /* width: 450px; */
+  width: 30em;
+
 }
 
 .chapter-divider {
-  width:80%;
+  width: 80%;
   border-top: 2px solid white;
   margin: auto !important;
   border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0),white, rgba(0, 0, 0, 0));
+}
+
+@media screen and (max-width: 1775px) {
+  .col-xl-3{
+    display: none;
+  }
 }
