refactor main creation loop and add part of alligner

--- a/style.css
+++ b/style.css
@@ -124,9 +124,9 @@ text-align:center;
 }
 
 @media (max-width: 992px) {
-  p2{font-size: 1.4rem;}
+  p2{font-size: 1.6rem;}
   .popup-card {
-    width: 100%;
+    width: 40rem;
   }
   .desktop-buffer{
     display: none;
@@ -150,9 +150,11 @@ text-align:center;
   padding-bottom: 0.25rem !important;
   padding-left: 1.25rem !important;
   padding-right: 1.25rem !important;
-
 }
 
+.list-group-item.active {
+  border: none;
+}
 
 #sidebar-wrapper {
   border-right-color: rgba(255, 255, 255, 0.3) !important;
