--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-html, body, header {
+html,
+body,
+header {
   /* height: 100%; */
   margin: 0;
   background-color: #00001e;
@@ -12,7 +14,6 @@ header {
   z-index: 0;
   overflow: hidden;
 }
-
 
 /* header {
   text-align: center;
@@ -29,7 +30,7 @@ header {
 }
 
 .magic-circle {
-display: inline-block;
+  display: inline-block;
   margin: 0 auto;
   max-height: 100vh;
   /* width: 0%; */
@@ -39,8 +40,6 @@ display: inline-block;
   height: 830px;
   max-width: 100%;
   object-fit: cover; */
-
-
 
   /* position: absolute;
   top: 0;
@@ -93,11 +92,10 @@ text-align:center;
   display: inline-block;
   margin: 0 auto;
   width: 30em;
-
 }
 
 .column-centre {
-  text-align:center;
+  text-align: center;
 }
 
 .popup-card {
@@ -114,40 +112,45 @@ text-align:center;
   margin: auto !important;
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0),white, rgba(0, 0, 0, 0));
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    white,
+    rgba(0, 0, 0, 0)
+  );
 }
 
 @media screen and (max-width: 1775px) {
-  .col-xl-3{
+  .col-xl-3 {
     display: none;
   }
 }
 
 @media (max-width: 992px) {
-  html{font-size: 1.6rem;}
-  .popup-card {
-    width: 40rem;
+  html {
+    font-size: 1.7rem;
   }
-  .desktop-buffer{
+  .popup-card {
+    width: 30rem;
+  }
+  .desktop-buffer {
     display: none;
   }
 }
-
 
 .navbar {
   z-index: 99999;
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.3); */
 }
 .navbar-brand {
- margin-left: 1rem;
+  margin-left: 1rem;
 }
-
 
 /* sidebar stuff */
 .list-group-item {
   margin-top: 0px !important;
   border-bottom: 1px !important;
-  border: 0px solid rgba(255, 255, 255, 0.0);
+  border: 0px solid rgba(255, 255, 255, 0);
   padding-top: 0.25rem !important;
   padding-bottom: 0.25rem !important;
   padding-left: 1.25rem !important;
@@ -163,10 +166,10 @@ text-align:center;
   z-index: 99999;
   min-height: 100vh;
   margin-left: -15rem;
-  -webkit-transition: margin .25s ease-out;
-  -moz-transition: margin .25s ease-out;
-  -o-transition: margin .25s ease-out;
-  transition: margin .25s ease-out;
+  -webkit-transition: margin 0.25s ease-out;
+  -moz-transition: margin 0.25s ease-out;
+  -o-transition: margin 0.25s ease-out;
+  transition: margin 0.25s ease-out;
 }
 
 #sidebar-content {
