--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ header {
   /* font-size: 24px; */
 }
 
+p2 {
+    display: block;
+    font-size: 19px;
+    line-height: 32px;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+
+}
+
 header {
   position: relative;
   z-index: 0;
@@ -128,7 +137,7 @@ text-align:center;
 
 @media (max-width: 992px) {
   html {
-    font-size: 1.7rem;
+    font-size: 21px;
   }
   .popup-card {
     width: 30rem;
@@ -140,8 +149,22 @@ text-align:center;
 
 .navbar {
   z-index: 99999;
-  /* border-bottom: 1px solid rgba(255, 255, 255, 0.3); */
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+.footer {
+  z-index: 99999;
+  width: 100%;
+  height: 7rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  text-align: center;
+  padding-top: 3rem;
+}
+
+.top {
+  z-index: 99999;
+}
+
 .navbar-brand {
   margin-left: 1rem;
 }
